Use Collections.emptyList and Collections.emptyMap in ChainDeal
Those methods create respectively an immutable List and Map.
For each method, the returned instance is created only once.
It avoids to create a new List or Map for each call.